--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,21 @@
         <appium.java.version>8.5.1</appium.java.version>
         <extentreport.version>5.0.8</extentreport.version>
         <restassured.version>5.2.0</restassured.version>
-        <webdrivermanager.version>5.0.3</webdrivermanager.version>
+        <webdrivermanager.version>5.6.3</webdrivermanager.version>
         <selenium.version>4.15.0</selenium.version>
         <lombok.version>1.18.20</lombok.version>
         <junit.jupiter.version>5.8.2</junit.jupiter.version>
         <testng.version>7.4.0</testng.version>
+        <slf4j.version>2.0.11</slf4j.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
