--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,1 +1,9 @@
+#chrome or firefox
 browser=chrome
+#local or remote
+runModeBrowser=local
+runModeMobile=local
+#browser_stack
+browserRemoteMode=browser_stack
+#browser_stack
+mobileRemoteMode=browser_stack
